# Submodular-b-matching

./: .gitignore  CMakeLists.txt  README.md  resource_allocation.ipynb  scratch.ipynb
apps/: CMakeLists.txt  greedy_matching_test.cpp  greedy_perturbed_matching_test.cpp  load_balance_test.cpp  load_balance_test_new.cpp  load_balance_test_simple.cpp  shm_submodular_local_greedy_matching_test.cpp  submodular_greedy_matching_test.cpp  submodular_local_greedy_matching_test.cpp  test_input.cpp
data/: gc_bp_110.match  load-balance-new.ipynb  ubi_sto3g_1000.match  ubi_sto3g_1000_simple.match  ubi_sto3g_2000.match
data/GC_BP/: gc_bp_110.csv  gc_bp_110.csv_final.csv  gc_bp_220.csv  gc_bp_220.csv_final.csv  gc_bp_400.csv  gc_bp_400.csv_final.csv  gc_bp_800.csv  gc_bp_800.csv_final.csv
data/simple-bal/: guanine_cytosine_bp.6-31++g*.taskmap.txt
include/: graph.h  input.h  load.h  matching.h  utility.h
job_submission/: greedySubMatching  job_script.sl  job_script_cori_shm.sl  job_script_io.sl  job_script_lb.sl  job_script_lb_rice.sl  job_script_lb_rice_tmp.sl  job_script_lb_snyder.sl  job_script_lz.sl  job_script_mtx.sl  job_script_quality.sl  job_script_shm.sl  job_script_shm_large.sl  lb  lb1  lg_b_5_alhpa_0.5  lg_b_5_alpha_0.5  llg  llg_b_5_alhpa_0.5  llg_b_5_alpha_0.5  quality_result  shmllg  shmllg_b_5_alpha_0.5  shmllg_b_5_alpha_0.5_v2  slurm-100661.out  slurm-105218.out  testinput
results/: c60_1200_alpha_0.5  c60_1200_alpha_0.5_match  c60_1200_alpha_1  c60_1200_alpha_1_match  c60_139650_240_alpha_0.5  c60_139650_240_alpha_0.5_match  c60_139650_240_alpha_1  c60_139650_240_alpha_1_match  test_file  test_file1  ubiquitin_1800.mtx_alpha_0.5  ubiquitin_1800.mtx_alpha_0.5_new  ubiquitin_3600.mtx_alpha_0.5  ubiquitin_3600.mtx_alpha_0.5_new  ubiquitin_900.mtx_alpha_0.5  ubiquitin_900.mtx_alpha_0.5_new  uracil_N_1222_240_alpha_0.1  uracil_N_1222_240_alpha_0.5  uracil_N_1222_240_alpha_1  uracil_N_1222_480.mtx_alpha_0.5
src/: CMakeLists.txt  cluster.cpp  createMtx.py  createWeightedGraph.py  graph.cpp  greedyMatching.cpp  input.cpp  loadBalSimple.cpp  localLazyGreed.cpp  localLazyGreedEps.cpp  shmLocalLazyGreed-old.cpp  shmLocalLazyGreed.cpp  shmLocalLazyGreedy.cpp  submodularGreedyMatching.cpp  submodularGreedybMatching.cpp  utility.cpp
